move nav bar and fix color backdrop on smaller screen

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -254,9 +254,9 @@ tbody tr:nth-child(odd) th {
   position: absolute;
   top: 0;
   width: 100%;
-  height: 14.5rem;
+  height: 14.3rem;
 
-  @media (min-width: 38rem){
+  @media (min-width: 36rem){
     height: 17rem;
   }
 }
@@ -275,8 +275,35 @@ tbody tr:nth-child(odd) th {
 
 .masthead {
 
+  .masthead-nav {
+    float: right;
+
+    a {
+      padding: .25rem;
+      color: $accentcolor;
+      font-weight: 600;
+      -webkit-transition: all .2s ease;
+         -moz-transition: all .2s ease;
+              transition: all .2s ease;
+
+      &:hover {
+        text-decoration: none;
+        color: #333;
+      }
+
+      &:focus {
+        color: #333;
+        text-decoration: none;
+      }
+
+      + a {
+        padding: .25rem;
+      }
+    }
+  }
+
   &-title {
-    display: inline-block;
+    display: block;
     margin-bottom: 3rem;
     font-weight: 300;
     font-size: 50px;
@@ -318,34 +345,6 @@ tbody tr:nth-child(odd) th {
       }
     }
   }
-
-  .masthead-nav {
-    display: inline-block;
-    float: right;
-
-    a {
-      padding: .25rem;
-      color: $accentcolor;
-      font-weight: 600;
-      -webkit-transition: all .2s ease;
-         -moz-transition: all .2s ease;
-              transition: all .2s ease;
-
-      &:hover {
-        text-decoration: none;
-        color: #333;
-      }
-
-      &:focus {
-        color: #333;
-        text-decoration: none;
-      }
-
-      + a {
-        padding: .25rem;
-      }
-    }
-  }
 }
 
 .page {
@@ -365,7 +364,6 @@ tbody tr:nth-child(odd) th {
   }
 
   a {
-    padding: .3rem;
     color: $accentcolor;
 
     &:hover {
